--- a/style/style.css
+++ b/style/style.css
@@ -14,13 +14,14 @@ html, body {
     background-color: #000000;
 }
 #program {
-    height: 300px;
+    height: calc(100% - 120px);
     width: 100%;
 }
 .CodeMirror {
     height: 100%;
 }
 #console {
+    width: 100%;
     height: 100px;
     background-color: #666666;
 }
