--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+/*----FONTS----*/
+@import url(http://fonts.googleapis.com/css?family=Cantarell:700|Open+Sans:300&subset=cyrillic-ext);
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -10,7 +13,7 @@ html, body {
 }
 #header {
     width: 100%;
-    height: 20px;
+    height: auto;
     background-color: #000000;
 }
 #program {
@@ -23,4 +26,19 @@ html, body {
 #console {
     width: 100%;
     height: 200px;
+}
+#header {
+    color: #ffffff;
+    padding: 2px;
+}
+#menu {
+    font-family: monospace; line-height: 1.4em;
+    font-size: 1.2em;
+}
+.menu-item {
+    padding: 5px 10px;
+}
+
+.jq-dropdown-menu {
+    background-color: #000000!important;
 }
