Fix codemirror editor size

--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,8 @@
 html, body {
     height: 100%;
 }
-#program {
-    height: calc(100% - 220px);
+.ReactCodeMirror {
+    height: calc(100% - 228px);
     width: 100%;
 }
 .CodeMirror {
@@ -20,5 +20,4 @@ html, body {
 }
 #console {
     width: 100%;
-    height: 200px;
 }
